tests/ui/layout/gce-rigid-const-in-array-len.stderr
warning: the feature `generic_const_exprs` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/gce-rigid-const-in-array-len.rs:15:12
   |
LL | #![feature(generic_const_exprs)]
   |            ^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #76560 <https://github.com/rust-lang/rust/issues/76560> for more information
   = note: `#[warn(incomplete_features)]` on by default

error: the type `[u8; <u8 as A>::B]` has an unknown layout
  --> $DIR/gce-rigid-const-in-array-len.rs:25:1
   |
LL | struct S([u8; <u8 as A>::B])
   | ^^^^^^^^

error: aborting due to 1 previous error; 1 warning emitted

